--- a/src/app/pages/rcm-login/patients/add-patients/add-patients.component.scss
+++ b/src/app/pages/rcm-login/patients/add-patients/add-patients.component.scss
@@ -25,3 +25,13 @@ button.mat-raised-button {
     padding: 10px;
     background-color: #fff;
 }
+
+
+// .insurance-message {
+//     background-color: #f1f1f1;
+//     border: 1px solid #ddd;
+//     padding: 10px;
+//     margin-top: 15px;
+//     border-radius: 5px;
+//   }
+  
