--- a/src/app/pages/rcm-login/rcm-setup/staff-users/roles/roles.component.html
+++ b/src/app/pages/rcm-login/rcm-setup/staff-users/roles/roles.component.html
@@ -74,6 +74,7 @@
                 <th>Role</th>
                 <th class="text-center">Users</th>
                 <th class="text-center">Special Permission</th>
+                <th class="text-center">Stutas Update</th>
                 <th class="text-center">Perspectives</th>
                 <th class="text-center">Horizon</th>
                 <th style="text-align: center !important;">Screen Permissions</th>
@@ -86,6 +87,7 @@
                 <td class="text-center"><a style="cursor: pointer; color: cornflowerblue;"
                         (click)="onUserClick()">4/12</a>
                 </td>
+                
                 <td class="text-center">
                     <a (click)="openSpecialPermission()" style="cursor: pointer; color: cornflowerblue;">10/20</a>
                 </td>
