--- a/src/app/pages/rcm-login/cases/cases.component.scss
+++ b/src/app/pages/rcm-login/cases/cases.component.scss
@@ -311,3 +311,15 @@ mat-card {
     position: absolute;
     z-index: 10;
   }
+
+  
+::ng-deep .mat-menu-panel {
+    max-height: 250px !important; 
+  }
+  
+  ::ng-deep .scrollable-menu {
+    max-height: 200px; 
+    overflow-y: auto; 
+    display: flex;
+    flex-direction: column;
+  }
