--- a/src/app/pages/rcm-login/entities/law-firm/law-firm.component.scss
+++ b/src/app/pages/rcm-login/entities/law-firm/law-firm.component.scss
@@ -104,13 +104,13 @@
     margin-left: 25px;
 }
 
-.dropdown-content {
-    background-color: white;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
-    margin-top: -2px;
-    padding: 10px;
-    width: 31%;
-    position: absolute;
-    z-index: 10;
+::ng-deep .mat-menu-panel {
+    max-height: 250px !important; 
+  }
+  
+  ::ng-deep .scrollable-menu {
+    max-height: 200px; 
+    overflow-y: auto; 
+    display: flex;
+    flex-direction: column;
   }
