--- a/src/app/pages/rcm-login/liaison-dashboard/liaison-dashboard.component.html
+++ b/src/app/pages/rcm-login/liaison-dashboard/liaison-dashboard.component.html
@@ -88,12 +88,12 @@
                 </a>
             </li>
 
-            <li routerLinkActive="active" (click)="openAddPaitent(null);">
+            <!-- <li routerLinkActive="active" (click)="openAddPaitent(null);">
                 <a style="margin-top: 10px;">
                     <mat-icon *ngIf="!isNavOpen" matTooltip="Intake Update">save</mat-icon>
                     <span *ngIf="isNavOpen">Patient Intake</span>
                 </a>
-            </li>
+            </li> -->
         </ul>
     </nav>
 </div>
