--- a/src/app/pages/rcm-login/patients/patients.component.scss
+++ b/src/app/pages/rcm-login/patients/patients.component.scss
@@ -223,3 +223,26 @@ h4 {
     box-shadow: none !important;
   }
   
+
+  .center-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5em 1em;
+}
+
+.center-icon mat-icon {
+    vertical-align: middle;
+    margin: 0;
+}
+
+::ng-deep .mat-menu-panel {
+    max-height: 250px !important; 
+  }
+  
+  ::ng-deep .scrollable-menu {
+    max-height: 200px; 
+    overflow-y: auto; 
+    display: flex;
+    flex-direction: column;
+  }
