--- a/src/app/pages/rcm-login/rcm-case-manager/rcm-case-manager.component.scss
+++ b/src/app/pages/rcm-login/rcm-case-manager/rcm-case-manager.component.scss
@@ -1,13 +1,4 @@
-.dropdown-content {
-    background-color: white;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    border-radius: 8px;
-    margin-top: -2px;
-    padding: 10px;
-    width: 31%;
-    position: absolute;
-    z-index: 10;
-  }
+
 
   .input-style {
     flex: 1;
@@ -31,4 +22,13 @@
   }
   
   
+  ::ng-deep .mat-menu-panel {
+    max-height: 250px !important; 
+  }
   
+  ::ng-deep .scrollable-menu {
+    max-height: 200px; 
+    overflow-y: auto; 
+    display: flex;
+    flex-direction: column;
+  }
