--- a/src/app/pages/rcm-login/rcm-funds/batches/batches.component.scss
+++ b/src/app/pages/rcm-login/rcm-funds/batches/batches.component.scss
@@ -276,3 +276,14 @@ mat-card {
     font-size: 14px;
     color: #666;
 }
+
+::ng-deep .mat-menu-panel {
+    max-height: 250px !important; 
+  }
+  
+  ::ng-deep .scrollable-menu {
+    max-height: 200px; 
+    overflow-y: auto; 
+    display: flex;
+    flex-direction: column;
+  }
