--- a/src/app/pages/rcm-login/rcm-funds/invoices/invoices.component.scss
+++ b/src/app/pages/rcm-login/rcm-funds/invoices/invoices.component.scss
@@ -61,4 +61,17 @@
     width: 31%;
     position: absolute;
     z-index: 10;
+}
+
+
+
+  ::ng-deep .mat-menu-panel {
+    max-height: 250px !important; 
+  }
+  
+  ::ng-deep .scrollable-menu {
+    max-height: 200px; 
+    overflow-y: auto; 
+    display: flex;
+    flex-direction: column;
   }
