--- a/src/app/pages/rcm-login/rcm-funds/payments/pending/pending.component.scss
+++ b/src/app/pages/rcm-login/rcm-funds/payments/pending/pending.component.scss
@@ -11,3 +11,14 @@
     background-color: #50636d !important;
     color: white;
 }
+
+::ng-deep .mat-menu-panel {
+    max-height: 250px !important; 
+  }
+  
+  ::ng-deep .scrollable-menu {
+    max-height: 200px; 
+    overflow-y: auto; 
+    display: flex;
+    flex-direction: column;
+  }
