--- a/src/app/pages/rcm-login/rcm-payments/rcm-payments.component.scss
+++ b/src/app/pages/rcm-login/rcm-payments/rcm-payments.component.scss
@@ -309,3 +309,23 @@ mat-card {
     position: absolute;
     z-index: 10;
   }
+
+  ::ng-deep .mat-menu-panel {
+    max-height: 250px !important; 
+  }
+  
+  ::ng-deep .scrollable-menu {
+    max-height: 200px; 
+    overflow-y: auto; 
+    display: flex;
+    flex-direction: column;
+  }  ::ng-deep .mat-menu-panel {
+    max-height: 250px !important; 
+  }
+  
+  ::ng-deep .scrollable-menu {
+    max-height: 200px; 
+    overflow-y: auto; 
+    display: flex;
+    flex-direction: column;
+  }
