--- a/src/app/pages/rcm-login/rcm-setup/doc-type/doc-type.component.scss
+++ b/src/app/pages/rcm-login/rcm-setup/doc-type/doc-type.component.scss
@@ -7,3 +7,15 @@
     color: red;
     font-weight: bold;
 }
+
+  
+::ng-deep .mat-menu-panel {
+    max-height: 250px !important; 
+  }
+  
+  ::ng-deep .scrollable-menu {
+    max-height: 200px; 
+    overflow-y: auto; 
+    display: flex;
+    flex-direction: column;
+  }
