--- a/src/app/pages/rcm-login/rcm-setup/staff-users/rcm-users/rcm-users.component.scss
+++ b/src/app/pages/rcm-login/rcm-setup/staff-users/rcm-users/rcm-users.component.scss
@@ -5,3 +5,14 @@
     background-color: #e6e6e6 !important;
 }
 
+  
+::ng-deep .mat-menu-panel {
+    max-height: 250px !important; 
+  }
+  
+  ::ng-deep .scrollable-menu {
+    max-height: 200px; 
+    overflow-y: auto; 
+    display: flex;
+    flex-direction: column;
+  }
