--- a/src/app/pages/rcm-login/referrals/referrals.component.html
+++ b/src/app/pages/rcm-login/referrals/referrals.component.html
@@ -66,8 +66,7 @@
   <div *ngIf="isNavOpen" style="display: flex; align-items: center; margin-top: -4.5%">
     <!-- Image Container -->
     <div class="col-sm-2" style="margin-left: 14%;  cursor: pointer" (click)="toggleCard()">
-      <img src="../../../../assets/rbg.png" 
-        style="width: 35px; height: 35px; margin-top: -18%; " />
+      <img src="../../../../assets/rbg.png" style="width: 35px; height: 35px; margin-top: -18%; " />
     </div>
 
 
@@ -169,9 +168,7 @@
               width: 35px;
               height: 35px;
               padding: 18px 15px 12px 15px;
-            "
-            (click)="referralsFilter($event)"
-            >
+            " (click)="referralsFilter($event)">
             filter_list
           </mat-icon>
         </div>
@@ -185,8 +182,7 @@
   <div *ngIf="!isNavOpen" style="display: flex; align-items: center; margin-top: -4.5%">
     <!-- Image Container -->
     <div class="col-sm-2" style="margin-left: 14%;  cursor: pointer" (click)="toggleCard()">
-      <img src="../../../../assets/rbg.png" 
-        style="width: 35px; height: 35px; margin-top: -12%; " />
+      <img src="../../../../assets/rbg.png" style="width: 35px; height: 35px; margin-top: -12%; " />
     </div>
 
 
@@ -288,9 +284,7 @@
               width: 35px;
               height: 35px;
               padding: 18px 15px 12px 15px;
-            "
-            (click)="referralsFilter($event)"
-            >
+            " (click)="referralsFilter($event)">
             filter_list
           </mat-icon>
         </div>
@@ -316,8 +310,8 @@
               'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9',
               'color': last ? 'black' : 'blue'
             }" [routerLink]="last ? null : ['/rcm-login/referrals']" [style.cursor]="last ? 'default' : 'pointer'">
-            {{ user.volume }}
-          </td>
+              {{ user.volume }}
+            </td>
           </tr>
         </tbody>
       </table>
@@ -339,8 +333,8 @@
               'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9',
               'color': last ? 'black' : 'blue'
             }" [routerLink]="last ? null : ['/rcm-login/referrals']" [style.cursor]="last ? 'default' : 'pointer'">
-            {{ user.volume }}
-          </td>
+              {{ user.volume }}
+            </td>
           </tr>
         </tbody>
       </table>
@@ -362,8 +356,8 @@
               'background-color': i % 2 === 0 ? 'lightgray' : '#f1f8e9',
               'color': last ? 'black' : 'blue'
             }" [routerLink]="last ? null : ['/rcm-login/referrals']" [style.cursor]="last ? 'default' : 'pointer'">
-            {{ user.volume }}
-          </td>
+              {{ user.volume }}
+            </td>
           </tr>
         </tbody>
       </table>
@@ -372,7 +366,7 @@
 
 
 
-  
+
 
   <!-- Perspective Mat-Icons -->
   <div class="col-sm-12 mb-3 mt-4" style="width: 103.6%">
@@ -766,6 +760,39 @@
         <mat-icon>merge_type</mat-icon> Merge
       </button>
 
+      <!-- Sort Button -->
+      <button mat-raised-button mat-button [matMenuTriggerFor]="sortMenu"
+        style="background-color: #37474f; color: white" class="filters-hover margin-right-10">
+        <span (click)="toggleSort($event)" class="icon-text">
+          <mat-icon style="margin-top: 0px; margin-bottom: -6px;">
+            {{ isAscending ? 'arrow_drop_up' : 'arrow_drop_down' }}
+          </mat-icon>
+        </span>
+        <span class="icon-text">SORT</span>
+      </button>
+
+      <!-- Dropdown Menu -->
+      <mat-menu #sortMenu="matMenu">
+        <div class="scrollable-menu">
+          <button mat-menu-item (click)="onSortOptionSelected('Actions')">Actions</button>
+          <button mat-menu-item (click)="onSortOptionSelected('Status')">Status</button>
+          <button mat-menu-item (click)="onSortOptionSelected('Referral ID')">Referral ID</button>
+          <button mat-menu-item (click)="onSortOptionSelected('Select')">Select</button>
+          <button mat-menu-item (click)="onSortOptionSelected('Visits')">Visits</button>
+          <button mat-menu-item (click)="onSortOptionSelected('Claims')">Claims</button>
+          <button mat-menu-item (click)="onSortOptionSelected('Patient ID')">Patient ID</button>
+          <button mat-menu-item (click)="onSortOptionSelected('Patient Name')">Patient Name</button>
+          <button mat-menu-item (click)="onSortOptionSelected('	Referral From')"> Referral From</button>
+          <button mat-menu-item (click)="onSortOptionSelected('Referral To')">Referral To</button>
+          <button mat-menu-item (click)="onSortOptionSelected('Specialty')">Specialty</button>
+          <button mat-menu-item (click)="onSortOptionSelected('Case ID')">Case ID</button>
+          <button mat-menu-item (click)="onSortOptionSelected('Case Type')">Case Type</button>
+          <button mat-menu-item (click)="onSortOptionSelected('Order Type')">Order Type</button>
+          <button mat-menu-item (click)="onSortOptionSelected('Last Updated')">Last Updated</button>
+          <button mat-menu-item (click)="onSortOptionSelected('Created')">Created</button>
+        </div>
+      </mat-menu>
+
       <button mat-raised-button matTooltip="Download CSV" class="center-icon"
         style="background-color: black; color: white; margin-right: 8px">
         <mat-icon>get_app</mat-icon>
@@ -786,8 +813,9 @@
         <mat-icon class="mat-margin-top">filter_list</mat-icon> Filter
       </button>
 
-      <button mat-raised-button color="primary" class="btn-primary margin-right-5" (click)="openEditDialog(null)">
-        <mat-icon class="mat-margin-top">add</mat-icon> Add Referral
+      <button mat-raised-button color="primary" class="btn-primary margin-right-5 center-icon"
+        (click)="openEditDialog(null)">
+        <mat-icon class="mat-margin-top">add</mat-icon>
       </button>
     </div>
   </div>
@@ -810,7 +838,7 @@
                 <div class="col-sm-7">
                   <mat-select placeholder="--Select Patient --" [(value)]="selectedPatientType" class="form-control"
                     multiple>
-    
+
                     <mat-select-trigger>
                       {{selectedPatientType || '--Select Patient--'}}
                     </mat-select-trigger>
@@ -824,7 +852,7 @@
                 </div>
               </div>
             </div>
-    
+
             <div class="col-sm-4 pl-4">
               <div class="row">
                 <div class="col-sm-4">
@@ -840,8 +868,8 @@
                 </div>
               </div>
             </div>
-    
-    
+
+
             <div class="col-sm-4 pl-4">
               <div class="row">
                 <div class="col-sm-4">
@@ -861,10 +889,10 @@
                 </div>
               </div>
             </div>
-    
-    
+
+
           </div>
-    
+
           <div class="row pt-4 pl-4">
             <div class="col-sm-4">
               <div class="row">
@@ -877,7 +905,7 @@
                     <mat-option [value]="'Family Law'">Legal</mat-option>
                     <mat-option [value]="'Criminal Defense'">Insurance</mat-option>
                     <mat-option [value]="'Contract Disputes'">Clinical</mat-option>
-                    <mat-option [value]="'Property Disputes'">Medical</mat-option>    
+                    <mat-option [value]="'Property Disputes'">Medical</mat-option>
                   </mat-select>
                 </div>
               </div>
@@ -889,8 +917,9 @@
                   <b>Law Firm:</b>
                 </div>
                 <div class="col-sm-7">
-                  <mat-select placeholder="--Select Law Firm--" [(value)]="selectLawFirmType" class="form-control" multiple >
-                    
+                  <mat-select placeholder="--Select Law Firm--" [(value)]="selectLawFirmType" class="form-control"
+                    multiple>
+
                     <mat-select-trigger>
                       {{selectLawFirmType || '--Select City--'}}
                     </mat-select-trigger>
@@ -912,7 +941,8 @@
                   <b>Referral Status:</b>
                 </div>
                 <div class="col-sm-7">
-                  <mat-select [(value)]="selectedRefferalType" placeholder="--Select Referral Status--" class="form-control">
+                  <mat-select [(value)]="selectedRefferalType" placeholder="--Select Referral Status--"
+                    class="form-control">
                     <mat-option [value]="'Pending Verificationn'">Pending Verification</mat-option>
                     <mat-option [value]="'Pending Authorization'">Pending Authorization</mat-option>
                     <mat-option [value]="'Verified'">Verified</mat-option>
@@ -938,7 +968,7 @@
                   <mat-select [(value)]="selectedDateType" placeholder="--Select Date Type--" class="form-control">
                     <mat-option [value]="'Date Created'">Date Created</mat-option>
                     <mat-option [value]="' Injury Date'"> Injury Date</mat-option>
-                       
+
                   </mat-select>
                 </div>
               </div>
@@ -950,13 +980,13 @@
                   <b>From Date:</b>
                 </div>
                 <div class="col-sm-7">
-                  <input type="date" class="form-control" maxlength="100"
-                  minlength="2" onDrag="return false" onDrop="return false" required>
+                  <input type="date" class="form-control" maxlength="100" minlength="2" onDrag="return false"
+                    onDrop="return false" required>
                 </div>
               </div>
             </div>
 
-            
+
 
             <div class="col-sm-4">
               <div class="row">
@@ -964,15 +994,15 @@
                   <b>To Date:</b>
                 </div>
                 <div class="col-sm-7">
-                  <input type="date" class="form-control" maxlength="100"
-                  minlength="2" onDrag="return false" onDrop="return false" required>
+                  <input type="date" class="form-control" maxlength="100" minlength="2" onDrag="return false"
+                    onDrop="return false" required>
                 </div>
               </div>
             </div>
 
 
           </div>
-    
+
           <div class="row pt-4 pl-4">
 
             <div class="col-sm-4">
@@ -981,9 +1011,9 @@
                   <b>Referral From:</b>
                 </div>
                 <div class="col-sm-7">
-                  <mat-select placeholder="--Select Referral From: --" [(value)]="selectedRefferalFrom" class="form-control"
-                    multiple>
-    
+                  <mat-select placeholder="--Select Referral From: --" [(value)]="selectedRefferalFrom"
+                    class="form-control" multiple>
+
                     <mat-select-trigger>
                       {{selectedRefferalFrom || '--Select Patient--'}}
                     </mat-select-trigger>
@@ -1007,7 +1037,7 @@
                 <div class="col-sm-7">
                   <mat-select placeholder="--Select Referral To: --" [(value)]="selectedRefferalTo" class="form-control"
                     multiple>
-    
+
                     <mat-select-trigger>
                       {{selectedRefferalTo || '--Select Referral To--'}}
                     </mat-select-trigger>
@@ -1030,12 +1060,12 @@
                     style="font-size: 20px; cursor: pointer; margin-left: 5px">
                     <i class="fa fa-angle-double-up" aria-hidden="true"></i>
                   </a>
-    
+
                   <i class="material-icons pull-right" matTooltip="Clear"
                     style="font-size: 25px; cursor: pointer; margin-left: 5px">
                     settings_backup_restore
                   </i>
-    
+
                   <i class="fa fa-save pull-right" matTooltip="Save" (click)="saveFilters()" style="
                         font-size: 20px;
                         cursor: pointer;
@@ -1043,7 +1073,7 @@
                         color: green;
                       " aria-hidden="true">
                   </i>
-    
+
                   <i class="fa fa-search pull-right" matTooltip="Search" style="
                         font-size: 20px;
                         cursor: pointer;
