--- a/src/app/pages/rcm-login/referrals/referrals.component.scss
+++ b/src/app/pages/rcm-login/referrals/referrals.component.scss
@@ -424,3 +424,13 @@ h4 {
 
 
 
+::ng-deep .mat-menu-panel {
+  max-height: 250px !important; 
+}
+
+::ng-deep .scrollable-menu {
+  max-height: 200px; 
+  overflow-y: auto; 
+  display: flex;
+  flex-direction: column;
+}
