--- a/src/app/pages/rcm-login/refferral-dashboard/referral-radar/referral-radar.component.html
+++ b/src/app/pages/rcm-login/refferral-dashboard/referral-radar/referral-radar.component.html
@@ -6,7 +6,7 @@
             <th>Order Type</th>
             <th>Case Type</th>
             <th>Priority</th>
-            <th>Referral Status</th>
+            <th (click)="changeColor()" [ngStyle]="{'color': rectangleColor}">Tag as Delayed</th>
         </tr>
         <tr>
             <td style="padding-left: 8px;">
@@ -40,7 +40,10 @@
                 </mat-select>
             </td>
             <td>
-                <mat-select class="form-control bac" placeholder="Select Referral Status">
+
+                <button mat-raised-button class="rectangle" (click)="changeColor()" [ngStyle]="{'background-color': rectangleColor}"></button>
+
+                <!-- <mat-select class="form-control bac" placeholder="Select Referral Status">
                     <mat-option [value]="'Failed'">Intake</mat-option>
                     <mat-option [value]="'Approved'">Verification</mat-option>
                     <mat-option [value]="'Completed'">Authorization</mat-option>
@@ -49,7 +52,7 @@
                     <mat-option [value]="'On Hold'">Processing</mat-option>
                     <mat-option [value]="'Canceled'">Closed</mat-option>
                     <mat-option [value]="'Canceled'">Hold</mat-option>
-                </mat-select>
+                </mat-select> -->
             </td>
         </tr>
     </table>
@@ -57,7 +60,10 @@
 
 <div>
     <button class="tab-button margin-right-10" [class.active]="selectedTab === 'overview'"
-        (click)="selectTab('overview')">Patient Info
+        (click)="selectTab('overview')">Overview
+    </button>
+    <button class="tab-button margin-right-10" [class.active]="selectedTab === 'diagnosis'"
+    (click)="selectTab('diagnosis')">Diagnosis
     </button>
     <button class="tab-button margin-right-10" [class.active]="selectedTab === 'moreInfo'"
         (click)="selectTab('moreInfo')">Legal
@@ -70,7 +76,7 @@
     </button>
 </div>
 
-<div class="col-sm-12 row mt-3" *ngIf="selectedTab === 'overview'">
+<div class="col-sm-12 row mt-4" *ngIf="selectedTab === 'overview'">
 
     <div class="col-sm-6" style="margin-left: -8px;">
         <div style="margin-bottom: 20px;" *ngIf="selectedTab === 'overview'">
@@ -112,16 +118,66 @@
     </div>
     <div class="col-sm-6">
         <mat-card style="height: auto; background-color: #fffce4;">
-            <div style="padding: 15px;">
-                <label style="font-size: 17px;">Enter Diagnosis</label>
+            <div class="row d-flex flex-wrap justify-content-center " style="padding: 30px;">
+             
+
+                <button mat-raised-button style="width: 200px; height: 50px; margin: 10px;background-color: #2188bf;">Verified</button>
+                <button mat-raised-button style="width: 200px; height: 50px; margin: 10px;background-color: #2188bf;">Authorize</button>
+                <!-- <button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 1}" (click)="toggleColor(1)">Scheduled</button>
+                <button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 2}" (click)="toggleColor(2)">Medical Records</button>
+                <button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 3}" (click)="toggleColor(3)">Claimed</button>
+                <button mat-raised-button class="custom-btn1" [ngClass]="{'white-btn1': isClicked1}" (click)="toggleColor1()">Funded</button>
+                <button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 4}" (click)="toggleColor(4)">Settled</button>
+                <button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 5}" (click)="toggleColor(5)">Paid</button>
+                 -->
+<!-- 
+                 <button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 1}" (click)="nextStep(1)">Scheduled</button>
+<button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 2}" (click)="nextStep(2)">Medical Records</button>
+<button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 3}" (click)="nextStep(3)">Claimed</button>
+<button mat-raised-button class="custom-btn1" [ngClass]="{'white-btn1': isClicked === 4}" (click)="nextStep(4)">Funded</button>
+<button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 5}" (click)="nextStep(5)">Settled</button>
+<button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 6}" (click)="nextStep(6)">Paid</button> -->
+
+
+<button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 1}" [disabled]="clickedButtons[1]" (click)="nextStep(1)">Scheduled</button>
+<button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 2}" [disabled]="clickedButtons[2]" (click)="nextStep(2)">Medical Records</button>
+<button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 3}" [disabled]="clickedButtons[3]" (click)="nextStep(3)">Claimed</button>
+<button mat-raised-button class="custom-btn1" [ngClass]="{'white-btn1': isClicked === 4}" [disabled]="clickedButtons[4]" (click)="nextStep(4)">Funded</button>
+<button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 5}" [disabled]="clickedButtons[5]" (click)="nextStep(5)">Settled</button>
+<button mat-raised-button class="custom-btn" [ngClass]="{'white-btn': isClicked === 6}" [disabled]="clickedButtons[6]" (click)="nextStep(6)">Paid</button>
+
+
+
+                   <!-- <label style="font-size: 17px;">Enter Diagnosis</label>
                 <textarea name="" id="" class="form-control" placeholder="Enter Diagnosis"
                     style="height: 180px;"></textarea>
                 <button mat-raised-button class="pull-right mt-3" style="background-color: green; color: white;">
                     <mat-icon>save</mat-icon>Update
+                </button> -->
+
+                <!-- <button style="width: 200px; height: 50px; margin-inline: 10px;  display: inline-block; ">
+                    Verified
                 </button>
+                <button style="width: 200px; height: 50px; margin-inline: 10px;">
+                    Verified
+                </button> -->
+
             </div>
         </mat-card>
     </div>
+</div>
+
+<div class="col-sm-12 row mt-3" style="background-color: #fffce4;" *ngIf="selectedTab === 'diagnosis'">
+ 
+    <div class="p-5">
+         <label style="font-size: 17px;">Enter Diagnosis</label>
+         <textarea name="" id="" class="form-control" placeholder="Enter Diagnosis"
+             style="height: 180px;"></textarea>
+         <button mat-raised-button class="pull-right mt-3" style="background-color: green; color: white; margin-bottom: 20px;">
+             <mat-icon>save</mat-icon>Update
+         </button> 
+
+     </div>
 </div>
 
 
